# cluster-agent

./: .craft.yml  .gitignore  CHANGELOG.md  CHANGELOG.rst  Dockerfile.dev  Makefile  README.md  dev-requirements.txt  docker-compose.centos.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  w.py
.craft/: bump-version.sh
.github/workflows/: prepare-release.yaml  publish-action.yaml  publish-release.yaml  test-on-push.yaml
armada_agent/: agent.py  config.py  main.py  settings.py
armada_agent/scripts/: agentconfig.py  agentrun.py
armada_agent/utils/: exception.py  jwt.py  logging.py  request.py  response.py  slurmrestd.py
cluster_agent/: agent.py  main.py  settings.py
cluster_agent/datastore/: __init__.py  mapper.py
cluster_agent/identity/: cluster_api.py  slurmrestd.py
cluster_agent/jobbergate/: api.py  constants.py  finish.py  schemas.py  submit.py
cluster_agent/scripts/: agentconfig.py  agentrun.py
cluster_agent/utils/: exception.py  job_script_parser.py  jwt.py  logging.py  parser.py  request.py  response.py  slurmrestd.py  user.py
etc/centos-slurm/: Dockerfile  docker-entrypoint.sh  register_cluster.sh
etc/docker-slurm/: Dockerfile.master  Dockerfile.node  cgroup.conf  master-entrypoint.sh  slurm.conf  slurmdbd.conf
examples/: nodes.json  partitions.json
tests/: conftest.py  test_agent.py  test_main.py  test_parser.py  test_settings.py
tests/identity/: test_cluster_api_identity.py  test_slurmrestd_identity.py
tests/jobbergate/: conftest.py  test_api.py  test_finish.py  test_submit.py
(+31 files in other folders)
