[tool.poetry]
name = "armada-agent"
version = "0.1.4"
description = "Armada data aggregator"
authors = ["OmniVector Solutions <info@omnivector.solutions>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "2.23.0"
boto3 = "1.17.8"
Codado = "0.8.0"
click = "7.1.2"
fastapi = "0.63.0"
uvicorn = "0.13.4"
pydantic = "1.7.4"
fastapi-utils = "0.2.1"
python-dotenv = "0.16.0"
aiohttp = "3.7.4"
nest-asyncio = "1.5.1"
toml = "0.10.2"

flake8 = { version = "3.9.2", optional = false }
pytest = { version = "6.2.4", optional = false }
pytest-asyncio = { version = "0.15.1", optional = false }

[tool.poetry.extras]
agent = ["httpx", "jinja2", "uvicorn", "pyyaml", "pydantic"]

dev = [
    "aiosqlite",
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-env",
    "pytest-freezegun",
    "pyyaml",
    "respx",
    "sqlalchemy-stubs",
    "tox",
    "uvicorn",
    "pydantic",
    ]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agentconfig = "armada_agent.scripts.agentconfig:parameters"
agentrun = "armada_agent.scripts.agentrun:run"
